--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <header class="container">
+        <nav>
+          <form id="sign-up">
+            <h2>Sign-Up</h2>
+            <input name="credentials[email]" type="text" placeholder="Email">
+            <input name="credentials[password]" type="password" placeholder="Password">
+            <input name="credentials[password_confirmation]" type="password" placeholder="Confirm Password">
+            <button type="submit">Sign up</button>
+          </form>
+      <h1>Groups</h1>
+
+
     </body>
 </html>
