--- a/index.html
+++ b/index.html
@@ -6,23 +6,39 @@
 
       <!-- Do not add `link` tags-->
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <!-- Do not add `script` tags-->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <header class="container">
-        <nav>
-          <form id="sign-up">
+      <div class="pre-signin container-fluid">
+        <div class="communication-bar">
+        <H1 id="title">Groups</H1>
+        <H2 id="system-message"></H2>
+      </div>
+          <div class="auth-space row">
+            <div class="col-3"></div>
+          <form class="col-6 " id="sign-up">
             <h2>Sign-Up</h2>
-            <input name="credentials[email]" type="text" placeholder="Email">
-            <input name="credentials[password]" type="password" placeholder="Password">
-            <input name="credentials[password_confirmation]" type="password" placeholder="Confirm Password">
+            <input name="credentials[email]" type="text" required placeholder="Email">
+            <input name="credentials[password]" type="password" required placeholder="Password">
+            <input name="credentials[password_confirmation]" type="password" required placeholder="Confirm Password">
             <button type="submit">Sign up</button>
           </form>
-      <h1>Groups</h1>
-
-
+          <div class="col-3"></div>
+          <div class="col-3"></div>
+          <form class="col-6" id="sign-in">
+            <h2>Sign-In</h2>
+            <input name="credentials[email]" type="text" required placeholder="Email">
+            <input name="credentials[password]" type="password" required placeholder="Password">
+            <button type="submit">Sign in</button>
+          </form>
+          <div class="col-3"></div>
+        </div>
+      </div>
+          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     </body>
 </html>
