Finalize Groups API calls and reactions

--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
 <!-- List of all non-user affiliated groups -->
   <div class="GroupsViewAll container-fluid hide">
     <h1 class='title'></h1>
+    <h2 class="system-message"></h2>
     <div class="row"></div>
       <div id="content" class="content"></div>
-    <button type="button" class="btn btn-outline-secondary backbutton">Back &larr;</button>
+    <button type="button" class="btn btn-outline-secondary backbutton">Home &larr;</button>
   </div>
 
 <!-- Account detail screen -->
@@ -186,7 +187,7 @@
       </div>
       <div class="col-md-3"></div>
     </div>
-    <button type="button" class="btn btn-outline-secondary backbutton">Back &larr;</button>
+    <button type="button" class="btn btn-outline-secondary backbutton">Home &larr;</button>
   </div>
 
 <!-- Create Group Screen -->
@@ -209,7 +210,7 @@
       <button type="submit" class="btn btn-primary center-block">Create</button>
     </form>
     <div class="col-md-2 col-12"></div>
-    <button type="button" class="btn btn-outline-secondary backbutton">Back &larr;</button>
+    <button type="button" class="btn btn-outline-secondary backbutton">Home &larr;</button>
   </div>
 </div>
 <!-- <div class="footer">
