Update title to Groups 2.0

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Groups!</title>
+  <title>Groups 2.0!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Do not add `link` tags-->
@@ -19,7 +19,7 @@
   <!-- Sign in and Sign up UI components. -->
   <div class="primary container-fluid">
     <div class="communication-bar">
-      <h1 class="title">Groups</h1>
+      <h1 class="title">Groups 2.0</h1>
       <h2 class="system-message"></h2>
     </div>
       <!-- Apply Accordian effect -->
